feat: 更新配置